- [NTT-18] fixed "Item configuration, edit log triggers, menu is broken" issue [partly fixed for FF due to doesn't support 'text-overflow' property] (Artem)
git-svn-id: svn://svn.zabbix.com/branches/1.4.j@4744 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/frontends/php/css.css
+++ b/frontends/php/css.css
@@ -1238,6 +1238,8 @@ ul
 	font-family: sans-serif, Tahoma, Verdana, Geneva, Arial, Helvetica;
 	font-size: 12px;
 	text-decoration: none;
+	overflow:hidden;
+	text-overflow:ellipsis;
 	background-color: #ECECFF;
 	border: black 1px solid;
 	margin: 0px;
@@ -1247,8 +1249,10 @@ ul
 	background-color: #FDFDFF;
 }
 .pum_i_item {
+	white-space:nowrap;
+	-o-text-overflow:ellipsis;
+	overflow:hidden;
 	margin: 3px 0px 0px 8px;
-
 }
 
 /* menu menu item with submenu */
